feat: Implement core Git service and enhance CLI commands
- Added GitService to handle Git operations like status checking and diffing.

- Updated Program.cs to include a status command and improved auto command structure.

- Created SecretManager for future API key management.

- Updated .gitignore to exclude Gemini-related files.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ TestResults/
 .nuget/
 **/packages/*
 
+.gemini
+Gemini.md
+GEMINI.MD
+
 # Rider/JetBrains IDE files
 .idea/
 
@@ -51,3 +55,5 @@ secrets.json
 
 # Environment variable configuration (e.g., .env file)
 .env
+gemini
+gemini.md
