--- a/GitFlowAi.csproj
+++ b/GitFlowAi.csproj
@@ -3,14 +3,23 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <PackageType>DotNetCliTool</PackageType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <PackageId>GitFlowAi</PackageId>
+    <ToolCommandName>gitflowai</ToolCommandName>
+    <PackAsTool>true</PackAsTool>
+    <IsTool>true</IsTool>
+
+    <PackAsToolShim>true</PackAsToolShim>
+
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.AIPlatform.V1" Version="3.56.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
+    <PackageReference Include="Mscc.GenerativeAI" Version="2.9.3" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
