--- a/GitFlowAi.csproj
+++ b/GitFlowAi.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.AIPlatform.V1" Version="3.56.0" />
+    <PackageReference Include="Google_GenerativeAI" Version="3.4.1" />
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="Mscc.GenerativeAI" Version="2.9.3" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
